@@ -23,8 +23,8 @@
 
 package net.sf.mpxj.mpp;
 
+import java.util.ArrayList;
 import java.util.Date;
-import java.util.LinkedList;
 import java.util.List;
 
 import net.sf.mpxj.Duration;
@@ -46,7 +46,7 @@ public class MPPTimephasedBaselineWorkNormaliser extends MPPAbstractTimephasedWo
     */
    @Override protected void mergeSameDay(ProjectCalendar calendar, List<TimephasedWork> list)
    {
-      LinkedList<TimephasedWork> result = new LinkedList<>();
+      List<TimephasedWork> result = new ArrayList<>();
 
       TimephasedWork previousAssignment = null;
       for (TimephasedWork assignment : list)
@@ -65,8 +65,8 @@ public class MPPTimephasedBaselineWorkNormaliser extends MPPAbstractTimephasedWo
 
             if (previousAssignmentStartDay.getTime() == assignmentStartDay.getTime())
             {
-               result.removeLast();
-
+               result.remove(result.size() -1);
+               
                double work = previousAssignment.getTotalAmount().getDuration();
                work += assignment.getTotalAmount().getDuration();
                Duration totalWork = Duration.getInstance(work, TimeUnit.MINUTES);
